name:          union-find-array
version:       0.1
stability:     experimental
maintainer:    Bertram Felgenhauer <int-e@gmx.de>
copyright:     Copyright (c) 2010-2011, Bertram Felgenhauer
license:       MIT
license-file:  LICENSE
category:      Algorithms, Data
synopsis:      union find data structure
description:
    ST based implementation of Tarjan\'s disjoint set forests, using mutable
    arrays storing indices instead of references internally. There is also
    a pure, immutable version of the data structure, which is useful for
    querying the result of a union find construction.
build-type:    Simple
cabal-version: >= 1.4

library
    hs-source-dirs:
        src
    exposed-modules:
        Data.Union
        Data.Union.ST
        Data.Union.Type
        Control.Monad.Union.Class
        Control.Monad.Union
    build-depends:
        array >= 0.3 && < 0.4,
        mtl >= 1.1 && < 2.1,
        base >= 4 && < 5
    extensions:
        GeneralizedNewtypeDeriving
        RankNTypes
        MultiParamTypeClasses
        FunctionalDependencies
        FlexibleInstances
        UndecidableInstances
