name:          union
version:       0.0
stability:     experimental
maintainer:    Bertram Felgenhauer <int-e@gmx.de>
copyright:     Copyright (c) 2010, Bertram Felgenhauer
license:       MIT
license-file:  LICENSE
category:      logic
synopsis:      union finding implementation
description:   disjoint set forest data structure for finding unions
build-type:    Simple
cabal-version: >= 1.4

library
    hs-source-dirs:
        src
    exposed-modules:
        Data.Union
        Data.Union.ST
        Data.Union.Type
        Control.Monad.Union
    build-depends:
        array >= 0.3 && < 0.4,
        mtl >= 1.1 && < 2.1,
        base >= 4 && < 5
    extensions:
        GeneralizedNewtypeDeriving
        RankNTypes
